--- a/05-phaser3/06-simple-platformer/index.html
+++ b/05-phaser3/06-simple-platformer/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
 <script src="js/phaser.js"></script>
+<script src="js/player.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
