--- a/01-webdevintro/02-scaffolding/index.html
+++ b/01-webdevintro/02-scaffolding/index.html
@@ -3,11 +3,29 @@
     <head>
         <meta charset="UTF-8" />
         <title>My first html file</title>
-        <link rel="stylesheet" href="style.css">
+        <!-- this is a comment in HTML -->
+        <style>
+            /* this is a single-line comment in css */
+            h1 {
+                color:gray;
+                background-color: lightgreen;
+                border: 1px solid black;
+            }
+            p {
+                font-family: "Courier New", monospace;
+            }
+        </style>
     </head>
     <body>
 		<h1> Hello World </h1>
         <p> This is my html page </p>
-        <script src="my-script.js"></script>
+        <script>
+            // this is a comment in Javascript
+            let text = "OMG its Javascript!";
+            function printText(){
+                console.log(text);
+            }
+            printText();
+        </script>
     </body>
 </html>
