--- a/workspace/index.html
+++ b/workspace/index.html
@@ -1,19 +1,6 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <title>My first Phaser 3 project</title>
-    <style>
-        canvas {
-            width: 50%;
-            margin: auto;
-            display: block;
-        }
-    </style>
-</head>
+<html>
 <body>
   <script src="js/phaser.js"></script>
-  <script src="js/player.js"></script>
   <script src="js/game.js"></script>
 </body>
 </html>
