--- a/04-math-scenegraph/e01-planets/index.html
+++ b/04-math-scenegraph/e01-planets/index.html
@@ -13,6 +13,6 @@
 </head>
 <body>
   <script src="js/phaser.js"></script>
-  <script src="js/game.js"></script>
+  <script src="js/planets.js"></script>
 </body>
 </html>
